# src/dto/response/order.dto.ts
@@ -1,0 +1,14 @@
+export interface IOrderHistoryRes {
+  _id: string;
+  shortId: string;
+  total: number;
+  createdAt: string;
+  firstProduct: {
+    _id: string;
+    name: string;
+    thumbnail: string;
+    quantity: number;
+    price: number;
+  };
+  orderItemsLength: number;
+}
